[metadata]
name = yt_dlp_wrapper
version = 0.1.0
long_description = file: README.md
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = yt_dlp_wrapper

[options.entry_points]
console_scripts =
    yt-dlp-wrapper = yt_dlp_wrapper:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
